--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,38 @@
 /** @format */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 10px;
+}
+
 h1 {
+  font-size: 4rem;
   text-align: center;
+  padding-bottom: 2rem;
+}
+
+h2 {
+  font-size: 3rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+a {
+  font-size: 1.8rem;
+  text-decoration: none;
+  color: red;
+}
+
+a:hover {
+  color: blue;
+}
+
+ul {
+  list-style-type: none;
 }
 
 th,
@@ -9,7 +40,14 @@ td {
   padding: 10px;
 }
 
-img {
-  width: 100%;
+.hero__image {
+  width: 50%;
   height: auto;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
